--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "mongoose-uuid2",
-  "version": "2.3.0",
-  "description": "UUID schema type for mongoose",
+  "name": "mongoose-uuid3",
+  "version": "0.0.1",
+  "description": "UUID schema type for mongoose with BSON version fix",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
     "coverage": "istanbul cover _mocha"
   },
-  "author": "Ian Patton <ian.patton@gmail.com> (http://github.com/niahmiah)",
+  "author": "Erinc Kuzu <erinckuzu@gmail.com> (http://github.com/erinckuzu)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/niahmiah/mongoose-uuid.git"
+    "url": "https://github.com/ekuzu/mongoose-uuid3.git"
   },
   "license": "ISC",
   "dependencies": {
