--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "uuid-parse": "^1.0.0"
   },
   "peerDependencies": {
-    "mongoose": "5.x"
+    "mongoose": ">5"
   },
   "keywords": [
     "mongoose",
@@ -32,7 +32,7 @@
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
+    "mocha": "^10.1.0",
     "request": "^2.88.0",
     "uuid": "^3.3.2"
   },
